feat: implement metrics system "Promethus"
Metrics Available at /api/metrics
http_request_duration_seconds — histogram of request durations
http_requests_total — counter of total requests by method/route/status
http_request_size_bytes — histogram of request payload sizes
http_response_size_bytes — histogram of response payload sizes
Default Node.js metrics — CPU, memory, GC, event loop lag, active handles, etc.

All of detail changing information of this commit please read in docs\metrics-implementation.md
